feat(app): 重构 MainActivity 并添加新功能
- 重构了 MainActivity 类，优化了代码结构和逻辑
- 添加了 IP 地址验证功能
- 实现了 SharedPreferences 保存和加载设置
- 优化了权限请求流程，支持 Android 13+ 通知权限
- 改进了服务启动方式，根据用户选择启动不同服务- 更新了 UI 样式，使用 CardView 包装传感器信息
- 调整了图表显示，增加了数据点数量控制和填充效果